Add session deletion API
